Fix Cupertino mobile modal spacing

--- a/src/layouts/cupertino-dialog.scss
+++ b/src/layouts/cupertino-dialog.scss
@@ -87,7 +87,7 @@ body:is(.layout-cupertino, .layout-macos):not(.mobile-stable).is-mobile {
 }
 body:is(.layout-cupertino, .layout-macos):not(.mobile-stable).is-phone {
   --menu-shadow: var(--shadow-s);
-  --menu-padding: 32px var(--side-padding);
+  --menu-padding: 32px var(--safe-area-inset-side);
 
   .menu {
     margin: 8px;
@@ -201,24 +201,24 @@ body:is(.layout-cupertino, .layout-macos):not(.mobile-stable).is-phone {
     }
 
     .modal-title {
-      padding-left: var(--side-padding);
+      padding-left: var(--safe-area-inset-side);
     }
 
     .modal-content {
-      padding: 0 var(--side-padding);
+      padding: 0 var(--safe-area-inset-side);
     }
 
     .modal-button-container {
       gap: 8px;
       margin-bottom: 0;
-      padding: var(--side-padding);
+      padding: var(--safe-area-inset-side);
     }
     .modal-button-container button {
       margin-top: 0;
     }
 
     .modal-nav-action {
-      margin: 0 var(--side-padding) 8px;
+      margin: 0 var(--safe-area-inset-side) 8px;
     }
   }
 }
